--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <section class="view-high-scores">View high scores</section>
+        <section class="time-left">Time left</section>
+    </header>
     <main>
         <section class="opening-page">
             <h1>Coding quiz challenge</h1>
@@ -26,7 +30,7 @@
                 <li class="answer">alerts</li>
                 <li class="answer">numbers</li>
             </ol>
-            <p>""</p>
+            <p>''</p>
         </section>
         <section class="closing-page">
             <h2>All done!</h2>
@@ -34,14 +38,14 @@
             <form >
                 <input type="text" name="" id="initials">
                 <label for="initials">Enter initials</label>
-                <button type="submit">Submit</button>
+                <button class="btn" type="submit">Submit</button>
             </form>
         </section>
-        <section>
+        <section class="high-scores">
             <h2>High scores</h2>
             <p></p>
-            <button id="go-back">Go back</button>
-            <button id="clear-high-scores">Clear high scores</button>
+            <button class="btn" id="go-back">Go back</button>
+            <button class="btn" id="clear-high-scores">Clear high scores</button>
         </section>
     </main>
 
