created highscores html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <section class="view-high-scores">View high scores</section>
+        <section class="view-high-scores"><a href="./highscores.html" >View high scores</a></section>
         <section class="time-left">Time left</section>
     </header>
     <main>
