--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             </div>
         </section>
         <section class="question-list">
-            <h1>Commonly used data types do not include:</h1>
-            <ol class="possible-answers">
-                <li class="answer">strings</li>
-                <li class="answer">booleans</li>
-                <li class="answer">alerts</li>
-                <li class="answer">numbers</li>
-            </ol>
-            <p>''</p>
+            <h1 class="question-text"></h1>
+            <div class="answers-body">
+                <button id="btn1"></button>
+                <button id="btn2"></button>
+                <button id="btn3"></button>
+                <button id="btn4"></button>
+            </div>
+            <p></p>
         </section>
         <section class="closing-page">
             <h2>All done!</h2>
