--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <section class="view-high-scores"><a href="./highscores.html" >View high scores</a></section>
-        <section class="time-left">Time left</section>
+        <section id="time-left">Time left</section>
     </header>
     <main>
         <section class="opening-page">
@@ -23,12 +23,12 @@
             </div>
         </section>
         <section class="question-list">
-            <h1 class="question-text"></h1>
+            <h1 id="question-text"></h1>
             <div class="answers-body">
-                <button id="btn1"></button>
-                <button id="btn2"></button>
-                <button id="btn3"></button>
-                <button id="btn4"></button>
+                <button class="btn" id="btn1"></button>
+                <button class="btn" id="btn2"></button>
+                <button class="btn" id="btn3"></button>
+                <button class="btn" id="btn4"></button>
             </div>
             <p></p>
         </section>
