--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section class="question-list">
             <h1 id="question-text"></h1>
-            <div class="answers-body">
+            <div id="answers-body">
                 <button class="btn" id="btn1"></button>
                 <button class="btn" id="btn2"></button>
                 <button class="btn" id="btn3"></button>
