identified more variables

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section id="time-left">Time left</section>
     </header>
     <main>
-        <section class="opening-page">
+        <section id="opening-page">
             <h1>Coding quiz challenge</h1>
             <p>Try to answer the following code-related questions within the time limit.
                 Keep in mind that incorrect answers will penalize your score/time by ten seconds.
@@ -22,7 +22,7 @@
                 <button class="btn" id="start-button">Start</button>
             </div>
         </section>
-        <section class="question-list">
+        <section id="question-list">
             <h1 id="question-text"></h1>
             <div id="answers-body">
                 <button class="btn" id="btn1"></button>
@@ -32,7 +32,7 @@
             </div>
             <p></p>
         </section>
-        <section class="closing-page">
+        <section id="closing-page">
             <h2>All done!</h2>
             <p>Your final score is</p>
             <form >
@@ -41,7 +41,7 @@
                 <button class="btn" type="submit">Submit</button>
             </form>
         </section>
-        <section class="high-scores">
+        <section id="high-scores">
             <h2>High scores</h2>
             <p></p>
             <button class="btn" id="go-back">Go back</button>
