added more eventlisteners and getelementbyid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <section id="view-high-scores">View high scores</section>
+        <button id="view-high-scores">View high scores</button>
         <section id="time-left">Time left</section>
     </header>
     <main>
@@ -38,7 +38,7 @@
             <form >
                 <label for="initials">Enter initials</label>
                 <input type="text" name="" id="initials">
-                <button class="btn" type="submit">Submit</button>
+                <button class="btn" id="submit">Submit</button>
             </form>
         </section>
         <section id="high-scores">
