--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </section>
         <section id="high-scores">
             <h2>High scores</h2>
-            <p></p>
+            <ul id="playersintials">
+                
+            </ul>
             <button class="btn" id="go-back">Go back</button>
             <button class="btn" id="clear-high-scores">Clear high scores</button>
         </section>
