added rightwrong text

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
                 <button class="btn" id="btn2"></button>
                 <button class="btn" id="btn3"></button>
                 <button class="btn" id="btn4"></button>
+                <p id="rightwrong"></p>
             </div>
             <p></p>
         </section>
         <section id="closing-page">
             <h2>All done!</h2>
-            <p>Your final score is</p>
-            <form >
+            <p id="displayscore"></p>
+            <form  id="form">
                 <label for="initials">Enter initials</label>
                 <input type="text" name="" id="initials">
                 <button class="btn" id="submit">Submit</button>
