--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="btn" id="btn4"></button>
                 <p id="rightwrong"></p>
             </div>
-            <p></p>
+            <!-- <p id="rightwrong"></p> -->
         </section>
         <section id="closing-page">
             <h2>All done!</h2>
