--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section id="opening-page">
             <h1>Coding quiz challenge</h1>
-            <p>Try to answer the following code-related questions within the time limit.
+            <p>Try to answer the following code-related questions within the time limit.</br>
                 Keep in mind that incorrect answers will penalize your score/time by ten seconds.
             </p>
             <div>
